--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!--script src="../megapixel-capture/main.js"></script-->
 	<script src="capture.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<!--link rel="stylesheet" type="text/css" href="../megapixel-capture/style.css"-->
 </head>
 <body>
