--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 <body>
 	<select id="camera-select"></select>
 
-	<video id="video"></video>
-	<div id="click-to-play" class="hidden">Click to Play</div>
+	<div id="arena">
+		<video id="video"></video>
+		<div id="click-to-play" class="hidden">Click to Play</div>
 
-	<div id="monster"></div>
-	<div id="ball"></div>
-	<div id="monster-label">Thingie (20XP)</div>
+		<div id="monster"></div>
+		<div id="ball"></div>
+		<div id="monster-label">Thingie (20XP)</div>
+	</div>
+	
 	<div id="popup" class="hidden"></div>
 	<div id="popup-shield"></div>
 </body>
