--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>andrewt.net / monsters</title>
+	<script src="data.js"></script>
 	<script src="script.js"></script>
-	<!--script src="../megapixel-capture/main.js"></script-->
 	<script src="capture.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta name="viewport" content="width=480, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-	<!--link rel="stylesheet" type="text/css" href="../megapixel-capture/style.css"-->
 </head>
 <body>
 	<select id="camera-select"></select>
@@ -21,7 +20,8 @@
 		<div id="monster-label">Thingie (20XP)</div>
 	</div>
 	
-	<div id="popup" class="hidden"></div>
+	<div id="gotcha" class="hidden popup" class="hidden"></div>
+	<div id="evolution-game" class="hidden popup" class="hidden"></div>
 	<div id="popup-shield"></div>
 </body>
 </html>
