--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
 
 		<div id="monster"></div>
 		<div id="ball"></div>
-		<div id="monster-label">Thingie (20XP)</div>
+		<div id="monster-label"></div>
 	</div>
 	
-	<div id="gotcha" class="hidden popup" class="hidden"></div>
+	<div id="gotcha" class="hidden popup" class="hidden">
+		<h1 id="gotcha-name"></h1>
+		<img id="gotcha-image">
+		<button id="evolve">Evolve</button>
+		<button id="done">Done</button>
+	</div>
 	<div id="evolution-game" class="hidden popup" class="hidden"></div>
 	<div id="popup-shield"></div>
 </body>
