--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<div id="gotcha" class="hidden popup" class="hidden">
 		<h1 id="gotcha-name"></h1>
 		<img id="gotcha-image">
+		<div id="evolution"><span>Evolves from</span><ul id="evo-list"></ul></div>
 		<button id="evolve">Evolve</button>
 		<button id="done">Done</button>
 	</div>
