--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script src="script.js"></script>
 	<script src="capture.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<meta name="viewport" content="width=480, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 </head>
 <body>
 	<select id="camera-select"></select>
