--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<script src="data.js"></script>
 	<script src="script.js"></script>
 	<script src="capture.js"></script>
+	<link rel="manifest" href="manifest.json">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 </head>
