Attempt at polyfilled modern code

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<title>andrewt.net / monsters</title>
-	<script src="data.js"></script>
-	<script src="script.js"></script>
-	<script src="capture.js"></script>
+	<script type="text/javascript" src="data.js"></script>
+	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="http://webrtc.github.io/adapter/adapter-latest.js"></script>
+	<script type="text/javascript" src="capture.js"></script>
 	<link rel="manifest" href="manifest.json">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
