Added help button and readme

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
 	<select id="camera-select"></select>
 
+	<a class="fab" href="https://github.com/andrew-t/monsters/blob/master/README.md">?</a>
+
 	<div id="arena">
 		<video id="video"></video>
 		<div id="click-to-play" class="hidden">Click to Play</div>
