Added a VERY IMPORTANT WARNING and improved the UI

--- a/index.html
+++ b/index.html
@@ -24,12 +24,19 @@
 		<div id="monster-label"></div>
 	</div>
 	
-	<div id="gotcha" class="hidden popup" class="hidden">
+	<div id="danger-will-robinson" class="popup">
+		<p id="careful-now"></p>
+		<button id="whatevs">Done</button>
+	</div>
+	
+	<div id="gotcha" class="hidden popup">
 		<h1 id="gotcha-name"></h1>
 		<h2 id="gotcha-type"></h2>
 		<img id="gotcha-image">
 		<div id="evolution"><span>Evolves from</span><ul id="evo-list"></ul></div>
+		<br>
 		<button id="evolve">Evolve</button>
+		<br>
 		<button id="done">Done</button>
 	</div>
 	<div id="evolution-game" class="hidden popup" class="hidden"></div>
